# stuff

./: .gitignore  Cargo.toml  auto-torrent.py  cargo-coverage.sh  co2-notifier.py  excalidraw-clipboard-images.py  fabulous-java.py  factorio-keep-achievements.js  filebin.py  fix-tabs.py  forest-fire.py  gdb_bptrace.py  gdb_fmtdbg.py  github-notifier.py  hedgedoc-clipboard-sanitize.py  hsp-postprocess.py  hsp-scraper.py  html-bundler.py  kernel-version-diff.sh  kruskal_cards.py  langtons-ant.go  nix-channel-notifier.py  pamixer-notify.sh  snaek.py  twitch-notifier.py  twitch_notifier.py  unmask-openwrt-xiaomi-lua.py  version_skew.py  watchdiff.fish  zsh-history.py
ansi-qr/: Cargo.toml
ansi-qr/src/: lib.rs
buddha/: Cargo.toml
buddha/src/: main.rs
cargo-rebuild/: Cargo.toml
cargo-rebuild-binaries/: Cargo.toml
cargo-rebuild-binaries/src/: main.rs
cargo-rebuild/src/: main.rs
ctfgrep/: Cargo.toml
ctfgrep/src/: main.rs  regex.rs  statemachine.rs  transforms.rs
lock/: Cargo.toml  i3lock.go  locker.go  main.go  suspend.go  xidletrigger.go
lock-rs/: Cargo.toml
lock-rs/src/: i3lock.rs  main.rs  suspend.rs  xidle.rs
lock/src/: i3lock.rs  main.rs  status.rs  suspend.rs  xidle.rs
mdc/: Cargo.toml
mdc/chrome-extension/: script.js
mdc/src/: main.rs
mediad/: .gitignore  Cargo.toml
mediad/mdc/: Cargo.toml
mediad/mdc/chrome-extension/: manifest.json  script.js
mediad/mdc/src/: main.rs
mediad/src/: main.rs  mpv.rs
mpvtube/: Cargo.toml  manifest.json  script.js
mpvtube/src/: main.rs
pkgbuilds/: .gitignore
pkgbuilds/010editor/: .SRCINFO  PKGBUILD
pkgbuilds/010editor-unlock/: .gitignore  010editor-unlock.hook  010editor-unlock.install  PKGBUILD  patch.sh
pkgbuilds/bitwuzla-git/: PKGBUILD
pkgbuilds/btor2tools-git/: PKGBUILD
pkgbuilds/cadical/: 0001-include-c-header-and-configure-as-shared-library.patch  0002-1.5.2.patch  PKGBUILD
pkgbuilds/libipt/: PKGBUILD
pkgbuilds/libprotobuf-mutator-git/: PKGBUILD
pkgbuilds/libprotobuf-mutator-git/example/: thing.cc  thing.pb.cc  thing.pb.h  thing.proto
pkgbuilds/python-numba-stub/: PKGBUILD  __init__.py  pyproject.toml
pkgbuilds/touchosc-bin/: IsUnlocked.asm  PKGBUILD
pkgbuilds/touchosc-bin-unlock/: IsUnlocked.asm  PKGBUILD  patch.sh  touchosc-bin-unlock.hook  touchosc-bin-unlock.install
pkgbuilds/tundra-git/: .gitignore  PKGBUILD  gtest.patch
podplayer/: client.go  main.go  messages.go  mpv.go  podcast.go  supersecurestuff.go  ui.go  uielements.go
pwndock/: Dockerfile  Dockerfile-18.04  Dockerfile-20.04  Dockerfile-21.04  Dockerfile-22.04  Dockerfile-24.04  Dockerfile-alpine  Dockerfile-fedora  Makefile  run.sh
testgo/: benchmark.go  main.go  main_test.go  test.go
