[package]
name = "cargo-rebuild"
version = "0.1.0"
authors = ["Mrmaxmeier <Mrmaxmeier@gmail.com>"]

[[bin]]
name = "cargo-rebuild"

[dependencies]
log = "^0.3"
env_logger = "^0.3"
ansi_term = "^0.7.2"
toml = "^0.1.30"
docopt = "^0.6.80"
rustc-serialize = "^0.3.19"
walkdir = "^0.1.0"
lazysort = "^0.1.1"
