[package]
authors = ["Mrmaxmeier <Mrmaxmeier@gmail.com>"]
name = "cargo-rebuild"
version = "0.1.0"

[[bin]]
name = "cargo-rebuild"

[dependencies]
ansi_term = "^0.9.0"
docopt = "0.7.0"
env_logger = "0.4.3"
lazysort = "^0.1.1"
log = "^0.3"
rustc-serialize = "^0.3.19"
toml = "0.4.1"
walkdir = "^1.0.3"
