[package]
name = "lock"
version = "0.1.0"
authors = ["Mrmaxmeier <Mrmaxmeier@gmail.com>"]

[dependencies]
x11-dl = "*"
libc = "*"
docopt = "*"
docopt_macros = "*"
rustc-serialize = "*"
notify-rust = "*"
enum_primitive = "*"
num = "*"
term = "*"
term_size = "*"

[dependencies.x11]
version = '*'
features = ["xlib", "xss"]
