[package]
authors = ["Mrmaxmeier <Mrmaxmeier@gmail.com>"]
name = "mediad"
version = "0.1.0"

[dependencies]
libc = "0.2.41"
rand = "0.5.0"
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0-rc.1"
rocket_contrib = "0.4.0-rc.1"

serde = "1.0.62"
serde_derive = "1.0.62"
serde_json = "1.0.18"
unix_socket = "0.5.0"
