[package]
authors = ["Mrmaxmeier <Mrmaxmeier@gmail.com>"]
name = "mdc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
